--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,8 +33,8 @@
 #          run: |
 #
 
-        - name: Start runner
-          run: .\run.cmd
+#        - name: Start runner
+#          run: .\run.cmd
 
         - name: Set up Python
           uses: actions/setup-python@v4
