--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,6 +45,7 @@
             python -m pip install pytest
             python -m pip install selenium
             python -m pip install webdriver-manager
+            python -m pip install pytest-html
 
         - name: Run tests
           run: python -m pytest -vs --html=report_in_github.html -m smoke
