--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,7 +43,7 @@
           run: | 
             cd Test
             mkdir -p reports
-            python -m pytest -vs -m smoke --browser=edge --html=reports/report_action.html
+            python -m pytest -vs -m smoke --browser=edge --html=reports/report_action.html --self-contained-html
 
         - name: Set output
           if: success() || failure()
