--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@
       strategy:
         fail-fast: false
         matrix:
-          os: [windows-latest, macos-latest, ubuntu-latest]
+          os: [windows-latest]
           python-versions:
 #            - "3.7"
             - "3.11"
