--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,8 +26,7 @@
 
         - name: Generate HTML Report
           run: |
-            cp templates/report_template.html report_action.html
-            powershell -Command "(Get-Content report_action.html) -replace '2024-01-28T12:00:00Z', ((Get-Date).AddHours(7).ToString('yyyy-MM-ddTHH:mm:ssZ')) | Set-Content report_action.html"
+            python modify_report_time.py
 
         #        - name: Set up runner
 #          run: |
