--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,10 +46,11 @@
             cd Test
             mkdir -p reports
             python -m pytest -vs -m smoke --browser=edge --html=reports/report_action.html --self-contained-html
-
-        - name: Modify HTML Report
-          run: |
             python modify_report_time.py
+
+#        - name: Modify HTML Report
+#          run: |
+#            python modify_report_time.py
 
         - name: Set output
           if: success() || failure()
