--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,13 +24,6 @@
         - name: Checkout code
           uses: actions/checkout@v3
 
-        #        - name: Set up runner
-#          run: |
-#            mkdir actions-runner
-#            cd actions-runner
-#            Invoke-WebRequest -Uri https://github.com/actions/runner/releases/download/v2.315.0/actions-runner-win-x64-2.315.0.zip -OutFile actions-runner-win-x64-2.315.0.zip
-#            Add-Type -AssemblyName System.IO.Compression.FileSystem ; [System.IO.Compression.ZipFile]::ExtractToDirectory("$PWD/actions-runner-win-x64-2.315.0.zip", "$PWD")
-
         - name: Set up Python
           uses: actions/setup-python@v3
           with:
@@ -45,18 +38,7 @@
           run: | 
             cd Test
             mkdir -p reports
-            python modify_report_time.py
-            python -m pytest -vs -m smoke --browser=edge --html=reports/report_action.html --self-contained-html
-            
-
-#        - name: Modify HTML Report
-#          run: |
-#            python modify_report_time.py
-
-#        - name: Set output
-#          if: success() || failure()
-#          id: results
-#          run: echo "artifactPath=Test/reports/" >> $GITHUB_OUTPUT
+            python -m pytest -vs -m smoke --browser=edge --html=reports/report_action.html --html-plugin=custom_pytest_html_plugin.py --self-contained-html
 
         - name: Set output --> upload artifact
           uses: actions/upload-artifact@v3
