--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,6 @@
       runs-on: ${{ matrix.os }}
 
       steps:
-
         - name: Checkout code
           uses: actions/checkout@v3
 
@@ -33,6 +32,9 @@
           run: |
             python -m pip install --upgrade pip
             python -m pip install -r requirements.txt
+
+        - name: Set Time Windows Server
+          run: tzutil /s "SE Asia Standard Time"
 
         - name: Run tests
           run: | 
