--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,8 +1,11 @@
   name: Selenium_Python_CI
 
   on:
+    push:
     schedule:
-    - cron: '25 19 * * *'
+    - cron: '34 19 * * *'
+    - cron: '34 02 * * *'
+    - cron: '34 2 * * *'
 
 
 
