--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,8 +54,8 @@
           with:
             server_address: smtp.gmail.com
             server_port: 465
-            smtp_user: ${{ secrets.GMAIL_USERNAME }}
-            smtp_password: ${{ secrets.GMAIL_PWD }}
+            username: ${{ secrets.GMAIL_USERNAME }}
+            password: ${{ secrets.GMAIL_PWD }}
             subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
             body: |            
               Dear all,
