--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,7 +40,7 @@
           run: | 
             cd Test
             mkdir -p reports
-            python -m pytest -vs -m smoke --browser=edge --html=reports/report_action.html --self-contained-html
+            python -m pytest -vs -m smoke --browser=chrome --html=reports/report_action.html --self-contained-html
 
         - name: Set output --> upload artifact
           uses: actions/upload-artifact@v3
