update test_navbar & test_login

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,5 +3,6 @@ markers =
     doing: (deselect with '-m "not doing"')
     assessment: (deselect with '-m "not assessment"')
     smoke: (deselect with '-m "not smoke"')
+    debug: (deselect with '-m "not debug"')
     serial
     # test
