--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,18 @@
-  name: Selenium_Python_CI
+  name: Portal Kerja Web UI Automation
 
   on:
-    push:
-      branches: [ main ]
-    schedule:
-    - cron: '00 05 * * *'
+    #    push:
+    #      branches: [ main ]
+    #    schedule:
+    #    - cron: '00 05 * * *'
+    workflow_dispatch:
+      inputs:
+        loglevel:
+          description: 'log level'
+          required: true
+          default: 'warning'
+        tags:
+          description: 'Dev Development Tags'
 
   jobs:
     run-tests:
@@ -49,32 +57,6 @@
             name: test-report-hrms
             path: Test/reports/report_action.html
 
-#        - name: Send email
-#          uses: dawidd6/action-send-mail@v3.7.1
-#          with:
-#            server_address: smtp.mailgun.org
-#            server_port: 587
-#            username: ${{ secrets.GMAIL_USERNAME }}
-#            password: ${{ secrets.GMAIL_PWD }}
-#            subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
-#            body: |
-#              Dear all,
-#              Berikut adalah hasil smoke test fitur-fitur utama portal kerja per hari ini
-#
-#              Detail Information:
-#                ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
-#
-#              Terima kasih,
-#              Regards,
-#              Miftah Ramadhan
-#              QA Engineer - PT VPN
-#            to: ramadhanz@example.com
-#            from: ${{ secrets.GMAIL_USERNAME }}
-##            secure: true
-##            ignore_cert: true
-##            convert_markdown: true
-##            priority: low
-#            attachments: Test/reports/report_action.html
 
 
 
