--- a/.github/workflows/ci_dev.yaml
+++ b/.github/workflows/ci_dev.yaml
@@ -48,14 +48,14 @@
           run: | 
             cd Test
             mkdir -p reports
-            python -m pytest -vs --browser=chrome --url=dev --html=reports/report_action.html --self-contained-html
+            python -m pytest -vs --browser=chrome --url=dev --html=reports/report_in_dev.html --self-contained-html
 
         - name: Set output --> upload artifact
           uses: actions/upload-artifact@v3
           if: success() || failure()
           with:
-            name: test-report-hrms
-            path: Test/reports/report_action.html
+            name: HRMS Test Report In DEV
+            path: Test/reports/report_in_dev.html
 
 
 
