update name job dev, sta, & prod

--- a/.github/workflows/ci_dev.yaml
+++ b/.github/workflows/ci_dev.yaml
@@ -24,7 +24,7 @@
           python-versions:
             - "3.11"
 
-      name: Test_Portal_Kerja
+      name: [DEV ENV] Test HRMS Portal Kerja
       runs-on: ${{ matrix.os }}
 
       steps:
