change git ignored and add another internal files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 internal_check_only.py
+internal_check_only
+E:\MyREPO_ORG\PortalKerja_Repo\Test\internal_check_only.py
 reports
 *.html
 .pytest_cache
