--- a/.github/workflows/ci_prod.yaml
+++ b/.github/workflows/ci_prod.yaml
@@ -48,7 +48,7 @@
           run: | 
             cd Test
             mkdir -p reports
-            python -m pytest -vs -m smoke --browser=chrome --url=prod --html=reports/report_in_production.html --self-contained-html
+            python -m pytest -vs -m smoke --browser=chrome -m smoke --url=prod --html=reports/report_in_production.html --self-contained-html
 
         - name: Set output --> upload artifact
           uses: actions/upload-artifact@v3
