--- a/.github/workflows/ci_staging.yaml
+++ b/.github/workflows/ci_staging.yaml
@@ -48,7 +48,7 @@
           run: | 
             cd Test
             mkdir -p reports
-            python -m pytest -vs --browser=chrome --url=staging --html=reports/report_in_staging.html --self-contained-html
+            python -m pytest -vs --browser=chrome -m smoke --url=staging --html=reports/report_in_staging.html --self-contained-html
 
         - name: Set output --> upload artifact
           uses: actions/upload-artifact@v3
