--- a/.github/workflows/ci_staging.yaml
+++ b/.github/workflows/ci_staging.yaml
@@ -24,7 +24,7 @@
           python-versions:
             - "3.11"
 
-      name: [STAGING ENV] Test HRMS Portal Kerja
+      name: (STAGING ENV) Test HRMS Portal Kerja
       runs-on: ${{ matrix.os }}
 
       steps:
