--- a/.github/workflows/ci_dev.yaml
+++ b/.github/workflows/ci_dev.yaml
@@ -22,7 +22,7 @@
           python-versions:
             - "3.11"
 
-      name: [DEV ENV] Test HRMS Portal Kerja
+      name: (DEV ENV) Test HRMS Portal Kerja
       runs-on: ${{ matrix.os }}
 
       steps:
