print PWD_SUPERADMIN yaml 3

--- a/.github/workflows/ci_dev.yaml
+++ b/.github/workflows/ci_dev.yaml
@@ -48,7 +48,7 @@
 
         - name: Print secret value
           run: echo $env:PWD_SUPERADMIN
-          shell: powershell
+          shell: pwsh
 
         - name: Run Test - Selenium with Pytest
           run: | 
