--- a/.github/workflows/ci_dev.yaml
+++ b/.github/workflows/ci_dev.yaml
@@ -47,7 +47,7 @@
             echo "PWD_SUPERADMIN=${{ secrets.PASS_SUPERADM }}" >> $GITHUB_ENV
 
         - name: Print secret value
-          run: Write-Host $env:PWD_SUPERADMIN
+          run: Write-Output $env:PWD_SUPERADMIN
           shell: pwsh
 
         - name: Run Test - Selenium with Pytest
