--- a/.github/workflows/ci_staging.yaml
+++ b/.github/workflows/ci_staging.yaml
@@ -9,8 +9,8 @@
           default: 'warning'
         tags:
           description: 'Dev Development Tags'
-    push:
-      branches: [ main ]
+#    push:
+#      branches: [ main ]
 
 #    schedule:
 #      - cron: '00 05 * * *'
