--- a/.github/workflows/ci_dev.yaml
+++ b/.github/workflows/ci_dev.yaml
@@ -22,11 +22,11 @@
           python-versions:
             - "3.11"
 
-      name: (DEV ENV) Test HRMS Portal Kerja
+      name: Automation Test Job
       runs-on: ${{ matrix.os }}
 
       steps:
-        - name: Checkout code
+        - name: Checkout Code
           uses: actions/checkout@v3
 
         - name: Set up Python
@@ -34,34 +34,33 @@
           with:
             python-version: ${{matrix.python-version}}
 
-        - name: install dependencies
+        - name: Install Dependencies
           run: |
             python -m pip install --upgrade pip
             python -m pip install -r requirements.txt
 
-        - name: Set Time Windows Server
+        - name: Set Time to UTC+7
           run: tzutil /s "SE Asia Standard Time"
 
-        - name: Set secret
+        - name: Set Up Variable Secrets
           shell: powershell
           run: |
             $secretValue = "${{ secrets.PASS_SUPERADM }}"
             [Environment]::SetEnvironmentVariable("PWD_SUPERADMIN", $secretValue, "Machine")
             Add-Content -Path $env:GITHUB_ENV "PWD_SUPERADMIN=$secretValue"
 
-        - name: Run Test - Selenium with Pytest
+        - name: Create Directory --> Test/reports
           run: | 
             cd Test
             mkdir -p reports
-            python -m pytest -vs --browser=chrome -m smoke --url=dev --html=./reports/report_in_dev.html --self-contained-html
 
-        - name: Set output --> upload artifact
+        - name: Run Pytest
+          run: | 
+            python -m pytest -vs --browser=chrome -m smoke --url=dev --html=./reports/dev_hrms_automation_test_report.html --self-contained-html
+
+        - name: Upload Report to Github Artifact
           uses: actions/upload-artifact@v4
           if: success() || failure()
           with:
-            name: DEV_HRMS_Web_Automation_Test_Report
-            path: Test/reports/report_in_dev.html
-
-
-
-
+            name: Dev_HRMS_AutomationTestReports
+            path: Test/reports/dev_hrms_automation_test_report.html
