--- a/.github/workflows/ci_prod.yaml
+++ b/.github/workflows/ci_prod.yaml
@@ -9,8 +9,8 @@
           default: 'warning'
         tags:
           description: 'Dev Development Tags'
-    push:
-      branches: [ main ]
+#    push:
+#      branches: [ main ]
 
   jobs:
     run-tests:
